--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Flask==1.1.2
 Flask-Cors==3.0.8
 numpy==1.18.5
 opencv-python==4.2.0.34
+fastai==1.0.42
+fastcache==1.1.0
+fastprogress==0.2.4
 torch==1.5.1
 torchvision==0.6.1
